@@ -20,7 +20,6 @@ package peersim.edsim;
 
 import java.util.*;
 
-import peersim.cdsim.*;
 import peersim.config.*;
 import peersim.core.*;
 
@@ -338,7 +337,7 @@ public static void nextExperiment()
 
 	// initialization
 	System.err.println("EDSimulator: resetting");
-	CDState.setPhase(CDState.PHASE_UNKNOWN);
+	CommonState.setPhase(CommonState.PHASE_UNKNOWN);
 	controls = null;
 	ctrlSchedules = null;
 	heap = new Heap();
